# passgen-desktop

./: .gitignore  DISTRIBUTION.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  db.rs  lib.rs
src/components/: AutoLockHandler.tsx  CircuitLines.tsx  GeneratorModal.tsx  GoldDust.tsx  GoldSmoke.tsx  PasswordCriteria.tsx  PasswordInput.tsx
src/components/dashboard/: AddEntryDialog.tsx  DashboardSidebar.tsx  DashboardTopNav.tsx  DeleteEntryDialog.tsx  EntryDetailsPane.tsx  EntryListPane.tsx  ImportPasswordsDialog.tsx  LockVaultDialog.tsx
src/components/generator/: GeneratorGuide.tsx  GeneratorPanel.tsx  GeneratorTabs.tsx  GeneratorTopBar.tsx  MnemonicTab.tsx  ModeSelector.tsx  PassphraseTab.tsx  PasswordDisplay.tsx  PatternTab.tsx  PhoneticTab.tsx  StandardTab.tsx  Toggle.tsx  constants.tsx
src/components/settings/: SecuritySettings.tsx  SettingsRow.tsx  SettingsSelect.tsx  SettingsShell.tsx
src/components/ui/: button-variants.ts  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx
src/components/vault-selector/: CreateVaultDialog.tsx  UnlockVaultDialog.tsx  (+3 more)
src/lib/: backend.ts  db.ts  importer.ts  settings.ts  unlockGuard.ts
src/pages/: AddEntry.tsx  Dashboard.tsx  Generator.tsx  Settings.tsx  SplashScreen.tsx  VaultSelector.tsx  WelcomeScreen.tsx
src/utils/: helpers.ts  hooks.ts  logger.ts  sanitize.ts  secureRandom.ts  types.ts
(+2 files in other folders)
