[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-os = "2"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
rand = "0.9.4"
base64 = "0.22.1"
zeroize = "1.8.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
subtle = "2.6"
unicode-normalization = "0.1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
